fix: use header according the amount type in categories board

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,5 +16,12 @@
     "travel": "Sorties, voyages",
     "transfer": "Transfert, action bancaire",
     "toBeDefined": "À catégoriser"
+  },
+
+  "Categories": {
+    "board": {
+      "debit-header": "Dépense",
+      "credit-header": "Revenu"
+    }
   }
 }
