--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,26 +6,139 @@
     }
   },
 
-  "Category": {
-    "services": "Services",
-    "daily-life": "Vie quotidienne",
-    "transportation": "Transports, véhicules",
-    "leasures": "Loisirs, sports",
-    "health": "Santé",
-    "housing": "Logement, immobilier",
-    "trips": "Sorties, voyages",
-    "income": "Revenus",
-    "children": "Enfants",
-    "education": "Education, formation",
-    "taxes": "Impôts, taxes",
-    "out-budget": "Hors budget",
-    "uncategorized": "À catégoriser"
-  },
-
   "Categories": {
     "board": {
       "debit-header": "Dépense",
       "credit-header": "Revenu"
+    }
+  },
+
+  "Data": {
+    "categories": {
+      "children": "Enfants",
+      "daily-life": "Vie quotidienne",
+      "education": "Education, formation",
+      "health": "Santé",
+      "housing": "Logement, immobilier",
+      "income": "Revenus",
+      "leasures": "Loisirs, sports",
+      "out-budget": "Hors budget",
+      "services": "Services",
+      "taxes": "Impôts, taxes",
+      "transportation": "Transports, véhicules",
+      "trips": "Sorties, voyages",
+      "uncategorized": "À catégoriser"
+    },
+    "subcategories": {
+      "children_activities": "Activités enfants",
+      "pocket_money": "Argent de poche",
+      "school_insurance": "Assurance scolaire",
+      "child-care": "Garde d'enfants",
+      "toys": "Jouets, cadeaux",
+      "child_support": "Pension versée",
+      "school_restaurant": "Restauration scolaire",
+      "children_others": "Autres (Enfants)",
+
+      "regular_shopping": "Alimentation, supermarché",
+      "pets": "Animaux",
+      "gifts": "Cadeaux offerts",
+      "cosmetics": "Coiffeur, esthétique, cosmétique, soins",
+      "donations": "Dons caritatifs",
+      "clothing": "Habillement",
+      "telecom": "Internet, TV, télécom",
+      "personal_loan_refund": "Remboursement prêt consommation",
+      "shopping": "Shopping / e-commerce",
+      "meals": "Snacks, fast-foods, repas au travail",
+      "press": "Tabac, Presse",
+      "daily_life_others": "Autres (Vie quotidienne)",
+
+      "lessons": "Cours, soutien scolaire",
+      "school_fees": "Inscription, scolarité",
+      "education_supplies": "Livres, fournitures scolaires",
+      "student_load_refund": "Remboursement prêt étudiant",
+      "education_others": "Autres (Education, formation)",
+
+      "health_insurance": "Cotisation mutuelle, prévoyance",
+      "health_costs": "Frais de santé",
+      "health_refunds": "Remboursement de santé",
+      "health_others": "Autres (Santé)",
+
+      "housing_insurance": "Assurance logement",
+      "housing_costs": "Charges logement",
+      "water": "Eau",
+      "electricity": "Electricité, gaz, chauffage",
+      "rent": "Loyer",
+      "furnitures": "Meubles, équipements",
+      "mortgage_refund": "Remboursement prêt immobilier",
+      "house_works": "Travaux, décoration, jardin",
+      "housing_others": "Autres (Logement, immobilier)",
+
+      "allowances": "Aides, allocations",
+      "gift_incomes": "Cadeaux, dons reçus",
+      "dividends": "Dividendes",
+      "interests": "Intérêts",
+      "pension": "Retraite",
+      "complementary_incomes": "Revenus complémentaires",
+      "replacement_incomes": "Revenus de remplacement",
+      "rental_incomes": "Revenus locatifs",
+      "salary": "Salaire / Revenus d'activités",
+      "income_others": "Autres (Revenus)",
+
+      "leasures_subscription": "Cotisation sports, loisirs",
+      "leasures_lessons": "Cours sports, loisirs",
+      "electronic": "Electronique, multimédia",
+      "leasures_supplies": "Equipement sports, loisirs",
+      "multimedia": "Musique, livres, films",
+      "hobbies": "Passion, hobby",
+      "leasures_others": "Autres (Sports, loisirs)",
+
+      "security_purchases": "Achats",
+      "security_sales": "Ventes de titres",
+      "advances": "Avances",
+      "refunds": "Remboursements",
+      "releasings": "Déblocage prêt, crédits, réserves",
+      "expenses_bill": "Notes de frais (+/-)",
+      "deferred_debit": "Prélèvement carte débit différé",
+      "saving_transfer": "Virements d'épargne",
+      "internal_transfer": "Virements internes",
+      "out-budget_others": "Autres (Hors budget)",
+
+      "home_help": "Aide à domicile",
+      "financial_consulting": "Conseil financier",
+      "legal_consulting": "Conseil juridique",
+      "bank_charges": "Frais bancaires",
+      "post": "Poste, courrier",
+      "services_others": "Autres (Services)",
+
+      "social_contributions": "Contributions sociales",
+      "income_tax": "Impôts sur le revenu",
+      "wealth_tax": "ISF",
+      "property_tax": "Taxes foncières, d'habitation",
+      "taxes_others": "Autres (Impôts, taxes)",
+
+      "car_purchase": "Achat véhicule",
+      "car_insurance": "Assurance véhicule",
+      "fuel": "Carburant",
+      "vehicle_maintenance": "Entretien, équipements véhicules",
+      "garage": "Garage, parking privé",
+      "vehicle_rental": "Location véhicule",
+      "parking_costs": "Parking, péages, PV",
+      "vehicle_loan_refund": "Remboursement prêt véhicule",
+      "taxi": "Taxi",
+      "public_transportation": "Transports en commun",
+      "transportation_others": "Autres (Transports, véhicules)",
+
+      "trips_transportation": "Avion, train, bateau",
+      "restaurants": "Restaurants, soirées",
+      "cultural_trips": "Sorties culturelles",
+      "relaxation_trips": "Sorties détente",
+      "journeys": "Voyages",
+      "trips_others": "Autres (Sorties, voyages)",
+
+      "cheques": "Chèques",
+      "withdrawals": "Retraits d'espèces",
+      "uncategorized_transfers": "Virements non categorisés",
+      "uncategorized_others": "Autres (À catégoriser)"
     }
   }
 }
