feat: display net breakdown by categry

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,8 @@
   "Categories": {
     "board": {
       "debit-header": "Dépense",
-      "credit-header": "Revenu"
+      "credit-header": "Revenu",
+      "net-header": "Net"
     }
   },
 
