feat: add double column to the table

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,12 +10,16 @@
     "board": {
       "debit-header": "Dépense",
       "credit-header": "Revenu",
-      "net-header": "Net"
+      "total-header": "Total"
     },
     "filter": {
       "debit": "Dépenses",
       "credit": "Revenus",
-      "net": "Net"
+      "total": "Total"
+    },
+    "title": {
+      "total": "Solde de la période",
+      "debit": "Dépense nette"
     }
   },
 
