fix: various style updates

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,7 @@
       "total-header": "Total"
     },
     "filter": {
-      "debit": "Dépenses",
+      "debit": "Total hors categ. revenus",
       "credit": "Revenus",
       "total": "Total"
     },
