--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,13 @@
 {
+  "Loading": {
+    "loading": "Chargement"
+  },
+
+  "AccountSwitch": {
+    "all_accounts": "Tous les comptes",
+    "accounts": "Comptes"
+  },
+
   "Movements": {
     "actions": {
       "bill": "Voir votre facture",
@@ -18,8 +27,18 @@
       "total": "Total"
     },
     "title": {
+      "general": "Catégorisation",
       "total": "Solde de la période",
-      "debit": "Dépense nette"
+      "debit": "Dépense nette",
+      "empty": "Categorisation",
+      "empty_text": "Pas de categories à afficher."
+    },
+    "headers": {
+      "categories": "Catégories",
+      "operations": "Opérations",
+      "debit": "Débit",
+      "credit": "Crédit",
+      "action": "Action"
     }
   },
 
