--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,9 @@
   "AccountSwitch": {
     "all_accounts": "Tous les comptes",
     "accounts": "Comptes",
-    "groups": "Groupes"
+    "groups": "Groupes",
+    "manage_groups": "Gérer mes groupes",
+    "manage_accounts": "Gérer mes comptes"
   },
 
   "Movements": {
@@ -170,5 +172,16 @@
       "uncategorized_transfers": "Virements non categorisés",
       "uncategorized_others": "Autres (À catégoriser)"
     }
+  },
+
+  "Groups": {
+    "groups": "Groupes",
+    "label": "Libellé",
+    "accounts": "Comptes",
+    "create": "créer",
+    "edit": "éditer",
+    "delete": "supprimer",
+    "create": "Créer un groupe",
+    "edit_group": "Editer le groupe"
   }
 }
