--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -184,5 +184,14 @@
     "delete": "supprimer",
     "create": "Créer un groupe",
     "edit_group": "Editer le groupe"
+  },
+
+  "Accounts": {
+    "label": "Libellé",
+    "account": "Compte ",
+    "type": "Type",
+    "shared": "Partagé",
+    "bank": "Banque",
+    "add-account": "Ajouter un compte"
   }
 }
