--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,9 +31,9 @@
     "actions": {
       "bill": "Afficher votre facture",
       "refund": "Vérifier vos remboursements",
-      "app": "Accéder à mon espace %{appName}",
+      "app": "Accéder à votre espace %{appName}",
       "attach": "Attacher un document",
-      "comment": "ajouter un commentaire"
+      "comment": "Ajouter un commentaire"
     }
   },
 
