feat: Add Balance page :balance_scale:

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,6 +27,22 @@
     "settings": "Paramètres"
   },
 
+  "Balance": {
+    "title": "Solde actuel",
+    "subtitle": {
+      "all": "Total de tous vos comptes",
+      "group": "Total du groupe %{label}",
+      "account": "Total du compte %{label}"
+    },
+    "subtitle_with_account_filter": "",
+    "subtitle_with_account_filter": "",
+    "subtitle_with_account_filter": "",
+    "account_name": "Nom du compte",
+    "solde": "Solde",
+    "bank_name": "Nom de la banque",
+    "account_number": "Numéro du compte"
+  },
+
   "Movements": {
     "actions": {
       "more": "Plus",
