refactor: design :art:

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -75,7 +75,7 @@
       "operations": "Opérations",
       "debit": "Débit",
       "credit": "Crédit",
-      "action": "Action"
+      "total": "Total"
     }
   },
 
