--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,7 +39,7 @@
     "last_12_months": "Last 12 months"
   },
   "Accounts": {
-    "no-accounts": "you do not have any account yet.",
+    "no-accounts": "You do not have any account yet.",
     "account": "Account",
     "shared-accounts": "Accounts shared to me",
     "my-accounts": "My accounts",
