--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,26 @@
     "accounts": "Accounts",
     "manage_accounts": "Manage my accounts"
   },
+
+  "AccountDetails": {
+    "label": "Label",
+    "institutionLabel": "Bank",
+    "number": "Number",
+    "type": "Type"
+  },
+
+  "Accounts": {
+    "account": "Account",
+    "add-account": "Add an account",
+    "bank": "Bank",
+    "label": "Label",
+    "my-accounts": "My accounts",
+    "no-accounts": "You do not have any account yet.",
+    "shared": "Shared",
+    "shared-accounts": "Accounts shared to me",
+    "type": "Type"
+  },
+
   "Balance": {
     "bank_name": "Name of the bank",
     "subtitle": {
