refactor(GroupsSettings): use <Table /> component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -73,7 +73,7 @@
     "edit_group": "Edit Group",
     "edit": "edit",
     "create": "Create a group",
-    "label": "Wording",
+    "label": "Label",
     "accounts": "Accounts",
     "groups": "Groups",
     "delete": "remove"
