--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,18 +37,6 @@
     "back-to-accounts": "Back to accounts"
   },
 
-  "Accounts": {
-    "account": "Account",
-    "add-account": "Add an account",
-    "bank": "Bank",
-    "label": "Label",
-    "my-accounts": "My accounts",
-    "no-accounts": "You do not have any account yet.",
-    "shared": "Shared",
-    "shared-accounts": "Accounts shared to me",
-    "type": "Type"
-  },
-
   "Balance": {
     "bank_name": "Name of the bank",
     "subtitle": {
@@ -65,9 +53,10 @@
     "last_12_months": "Last 12 months"
   },
   "Accounts": {
-    "no-accounts": "You do not have any account yet.",
     "account": "Account",
+    "no-accounts": "You do not have any account yet.",
     "shared-accounts": "Accounts shared to me",
+    "no-shared-accounts": "You do not have any shared account yet.",
     "my-accounts": "My accounts",
     "shared": "Shared",
     "add-account": "Add an account",
